Changes according to ModelRequest and TasksRequest Change assignTasks in defaultMainFacade